# compendium

./: .gitignore  Dockerfile  README.md  create_vectorstore.py  main.py  pyproject.toml  run.py
compendium/: __init__.py  config.py  embeddings.py  predict.py  split_from_all.py
compendium/types/: medication.py
templates/: index.html  login.html
