[tool.poetry]
name = "compendium"
version = "0.1.0"
description = ""
authors = ["Matthias Osswald <info@busykoala.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.4"
faiss-cpu = "^1.9.0"
langchain-community = "^0.3.3"
tiktoken = "^0.8.0"
langchain-openai = "^0.2.3"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
python-multipart = "^0.0.16"
python-json-logger = "^2.0.7"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
